--- a/agrinho/index.html
+++ b/agrinho/index.html
@@ -1,38 +1,61 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Festejando Conexão: Campo e Cidade</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Festejando a Conexão Campo e Cidade</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Festejando a Conexão: Campo e Cidade</h1>
-            <p>Celebrando a união entre o campo e a cidade!</p>
-        </div>
-    </header>
 
-    <section class="main-content">
-        <div class="container">
-            <h2>Uma Festa de Cultura e Tradição</h2>
-            <p>O campo e a cidade possuem ritmos, sons e tradições diferentes, mas juntos formam um todo harmônico que merece ser celebrado. Vamos explorar essa conexão única!</p>
-            
-            <div class="image-section">
-                <img src="https://via.placeholder.com/600x400?text=Campo" alt="Imagem de Campo">
-                <img src="https://via.placeholder.com/600x400?text=Cidade" alt="Imagem de Cidade">
-            </div>
+<header>
+<h1>Festejando a Conexão Campo e Cidade</h1>
+<p>Celebrando a harmonia entre o rural e o urbano</p>
+</header>
 
-            <h3>Atividades para Todos</h3>
-            <p>Durante este evento, teremos diversas atrações que misturam o rural e o urbano, como dança, música e comidas típicas que representam o melhor dos dois mundos.</p>
-        </div>
-    </section>
+<nav>
+<a href="#sobre">Sobre o Evento</a>
+<a href="#galeria">Galeria</a>
+<a href="#atividades">Atividades</a>
+<a href="#contato">Contato</a>
+</nav>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Festejando Conexão. Todos os direitos reservados.</p>
-        </div>
-    </footer>
+<section id="sobre">
+<h2 class="section-title">Sobre o Evento</h2>
+<p>O evento “Festejando a Conexão Campo e Cidade” promove a valorização da cultura rural e o fortalecimento dos laços com o espaço urbano. É um espaço de trocas, aprendizado e celebração, reunindo agricultores, artesãos, artistas e moradores da cidade para um dia de integração e reconhecimento mútuo.</p>
+<img src="img/conexaocapocidade.jpg" alt="Conexão campo e cidade">
+</section>
+
+<section id="galeria">
+<h2 class="section-title">Galeria de Momentos</h2>
+<div class="gallery">
+<img src="img/feira.jpeg" alt="Feira orgânica">
+<img src="img/colheita.avif" alt="Agricultores colhendo">
+<img src="img/familia.jpg" alt="Família urbana conhecendo animais">
+<img src="img/produtos.jpg" alt="Produtos naturais">
+</div>
+</section>
+
+<section id="atividades">
+<h2 class="section-title">Atividades do Evento</h2>
+<ul>
+<li><strong>Feira de Produtos Rurais:</strong> hortifrúti, queijos, mel, pães e mais.</li>
+<li><strong>Oficinas:</strong> agroecologia, culinária rural, compostagem e artesanato.</li>
+<li><strong>Apresentações Culturais:</strong> música caipira, danças regionais e contação de histórias.</li>
+<li><strong>Espaço Infantil:</strong> atividades com animais da fazenda e brincadeiras educativas.</li>
+</ul>
+<img src="img/atividades.avif" alt="Oficinas e atividades culturais">
+</section>
+
+<section id="contato">
+<h2 class="section-title">Entre em Contato</h2>
+<p><strong>Email:</strong> marcos.cristofoli@escola.pr.gov.br</p>
+<p><strong>Instagram:</strong> @renaan.07</p>
+</section>
+
+<footer>
+<p>&copy; 2025 - Festejando a Conexão Campo e Cidade. Todos os direitos reservados.</p>
+</footer>
+
 </body>
 </html>
