--- a/agrinho/index.html
+++ b/agrinho/index.html
@@ -7,7 +7,14 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+    
+    <!-- Vídeo de fundo -->
+<video autoplay muted loop playsinline class="video-bg">
+    <source src="img/j.mp4" type="video/mp4">
+    </video>
+    <!-- Conteúdo sobre o vídeo -->
+    <div class="conteudo">
+    </div>
 <header>
 <h1>Festejando a Conexão Campo e Cidade</h1>
 <p>Celebrando a harmonia entre o rural e o urbano</p>
@@ -30,7 +37,7 @@
 <h2 class="section-title">Galeria de Momentos</h2>
 <div class="gallery">
 <img src="img/feira.jpeg" alt="Feira orgânica">
-<img src="img/colheita.avif" alt="Agricultores colhendo">
+<img src="img/colheitaplantio.webp" alt="Agricultores colhendo">
 <img src="img/familia.jpg" alt="Família urbana conhecendo animais">
 <img src="img/produtos.jpg" alt="Produtos naturais">
 </div>
