--- a/agrinho/index.html
+++ b/agrinho/index.html
@@ -7,14 +7,7 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
-    <!-- Vídeo de fundo -->
-<video autoplay muted loop playsinline class="video-bg">
-    <source src="img/j.mp4" type="video/mp4">
-    </video>
-    <!-- Conteúdo sobre o vídeo -->
-    <div class="conteudo">
-    </div>
+
 <header>
 <h1>Festejando a Conexão Campo e Cidade</h1>
 <p>Celebrando a harmonia entre o rural e o urbano</p>
@@ -36,10 +29,11 @@
 <section id="galeria">
 <h2 class="section-title">Galeria de Momentos</h2>
 <div class="gallery">
-<img src="img/feira.jpeg" alt="Feira orgânica">
-<img src="img/colheitaplantio.webp" alt="Agricultores colhendo">
-<img src="img/familia.jpg" alt="Família urbana conhecendo animais">
-<img src="img/produtos.jpg" alt="Produtos naturais">
+<img src="img/2.png" alt="Feira orgânica">
+<img src="img/4.png" alt="Agricultores colhendo">
+<img src="img/3.png" alt="Família urbana conhecendo animais">
+<img src="img/1.png" alt="Produtos naturais">
+<img src="img/plantio.jpg" alt="Plantio">
 </div>
 </section>
 
