--- a/agronomo/index.html
+++ b/agronomo/index.html
@@ -39,9 +39,9 @@
             <div class="container">
                 <h2>Sobre Mim</h2>
                 <div class="about-flex">
-                    <img src="sua-foto.jpg" alt="Marcos Renan" class="profile-photo">
+                    <img src="img/eu.png" alt="Marcos Renan" class="profile-photo">
                     <p>
-                        Me chamo Marcos Renan, trabalho como Engenheiro Agrônomo há 5 anos, minha paixão pela Agronomia é impulsionada
+                        Me chamo Marcos Renan, trabalho como Engenheiro Agrônomo há 5 anos, formado na faculdade Unifil em Londrina PR, minha paixão pela Agronomia é impulsionada
                         pela conexão entre a ciência, a terra e o nosso sustento. Acredito que a agricultura moderna, quando praticada 
                         com inteligência e responsabilidade, não é apenas um negócio, mas a base para um futuro mais próspero e sustentável.
                     </p>
@@ -60,7 +60,7 @@
                         <a href="https://blog.verde.ag/pt/nutricao-de-plantas/irrigacao-adequada-da-soja/" class="view-project">Saiba Mais</a>
                     </div>
                     <div class="project-card">
-                        <img src="projeto-milho.jpg" alt="Projeto de Manejo">
+                        <img src="img/autopropelido.png" alt="Projeto de Manejo">
                         <h3>Manejo Integrado de Pragas</h3>
                         <p>Redução do uso de defensivos e otimização de custos com controle biológico.</p>
                         <a href="https://www.embrapa.br/agencia-de-informacao-tecnologica/cultivos/milho/producao/pragas-e-doencas/pragas/manejo-integrado-de-pragas" class="view-project">Saiba Mais</a>
@@ -85,4 +85,8 @@
             <div class="container">
                 <h2>Contato</h2>
                 <p>Pronto para otimizar sua produção? Entre em contato!</p>
+                    <p>(43) 9 9959-5316
+                    E-mail: mr10marcosrenan@gmail.com
+                    Instagram: _renaan.07</p>
+                </p>
                 <form
